# nash-llm

./: .gitignore  CLAUDE.md  LEADERBOARD.md  README.md  pyproject.toml
configs/: pretrain_100m.yaml  pretrain_100m_4L1152d.yaml  pretrain_100m_6L1024d.yaml  pretrain_100m_8L896d.yaml  pretrain_100m_moe.yaml  pretrain_100m_moe_fast.yaml  pretrain_100m_qv_capacity.yaml  pretrain_100m_qv_ka.yaml  pretrain_100m_teon.yaml  pretrain_1b.yaml  pretrain_1b_4L1152d.yaml  pretrain_1b_moe.yaml  pretrain_1b_moe_fast.yaml  pretrain_chinchilla.yaml  pretrain_debug.yaml  pretrain_small.yaml  pretrain_small_4L1152d.yaml  pretrain_small_4L1536d.yaml  pretrain_small_6L1024d.yaml  pretrain_small_6L1280d.yaml  pretrain_small_8L1024d.yaml  pretrain_small_8L896d.yaml  pretrain_small_namo.yaml  pretrain_small_namo_d.yaml  pretrain_small_qv.yaml  pretrain_small_spectra.yaml  pretrain_small_teon.yaml  pretrain_taro.yaml  pretrain_taro_paper.yaml  sft.yaml
knowledge/: summary_blt.md  summary_grouped_query_attention.md  summary_megabyte.md  summary_muon_plus.md  summary_namo_adaptive_muon.md  summary_qv_qvka_attention.md  summary_rotary_position_embedding.md  summary_sage_optimizer.md  summary_small_model_pretrain_comparators.md  summary_teon.md  summary_teon_adamw.md
scripts/: compare_runs.py  evaluate.py  generate.py  plot_metrics.py  prepare_data.py  train.py
tests/: test_aro.py  test_attention.py  test_checkpoint.py  test_config.py  test_dataset.py  test_e2e.py  test_eval.py  test_fp8.py  test_layers.py  test_logger.py  test_muon.py  test_norms.py  test_optim.py  test_scheduler.py  (+5 more)
(+41 files in other folders)
